--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,23 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    position: relative;
+    min-height: 100%;
     background-color: #f0f0f0;
 }
 
 div {
-    padding: 10px;
+    padding: 0px;
     background-color: #a18262;
 }
 
 img {
-    width: 20%;
+    width: 10%;
     height: auto;
-    box-shadow: #f0f0f0;
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 1em;
     color: rgb(0, 0, 0);
     margin: 20px 0;
     text-align: center;
