--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,38 @@
-div {
-    padding: 0px;
-    background-color: #a18262;
-}
-
-img {
-    width: 10%;
-    height: auto;
-}
-
-h1 {
-    font-size: 1em;
-    color: rgb(0, 189, 94);
-    margin: 20px 0;
-    text-align: left;
-    font-family: 'Courier New', Courier, monospace;
-    letter-spacing: 2px;
-    line-height: 1.5;
-    overflow: hidden;
-    white-space: nowrap;
-    border-right: 0.15em solid orange;
-    animation: typing 0.5 steps(40, end), blink-caret 0.75s step-end infinite;
-}
-
-@keyframes typing {
-    from { width: 0; }
-    to { width: 100%; }
-}
-
-@keyframes blink-caret {
-    from, to { border-color: transparent; }
-    50% { border-color: orange; }
-}
-
-section h2 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 5em;
+/* Ensure the footer stays at the bottom of the page */
+header h1 {
     text-align: center;
-    color: rgb(255, 0, 0);
-    margin: 30px 0;
-    text-transform: uppercase;
-    font-weight: bold;
-    animation: fadeIn 5s ease-in-out;
+    margin: 0;
+    padding: 0.1em;
+    background-color: #a18262;
+    color: white;
 }
 
-@keyframes fadeIn {
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+footer {
+    margin-top: auto;
+    background-color: #f1f1f1;
+    padding: 0.5x;
+    text-align: center;
+}
+
+h2 {
+    padding: 0.1em;
+    text-align: center;
+    font-size: 50px;
+    text-align: center;
+    margin: 0;
+    padding: 2em;
+    color: rgb(255, 0, 0);
+    animation: textFadeIn 5s ease-in-out;
+}
+
+@keyframes textFadeIn {
     from {
         opacity: 0;
     }
@@ -52,31 +41,10 @@ section h2 {
     }
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+p {
+    text-align: center;
+    font-size: 20px;
+    padding: 0.1em;
     margin: 0;
-    background: #000;
-    font-family: 'Arial', sans-serif;
-    overflow: hidden;
 }
 
-.neon-text {
-    font-weight: bold;
-    text-align: right;
-    font-size: 0.5;
-    color: #fff;
-    text-shadow: 0 0 5px #ff005e, 0 0 10px #ff005e, 0 0 20px #ff005e, 0 0 40px #ff005e, 0 0 80px #ff005e;
-    animation: glow 1.5s infinite alternate;
-}
-
-@keyframes glow {
-    0% {
-        text-shadow: 0 0 5px #ff005e, 0 0 10px #ff005e, 0 0 20px #ff005e, 0 0 40px #ff005e, 0 0 80px #ff005e;
-    }
-    100% {
-        text-shadow: 0 0 10px #00d4ff, 0 0 20px #00d4ff, 0 0 40px #00d4ff, 0 0 80px #00d4ff, 0 0 160px #00d4ff;
-    }
-}
